--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -296,7 +296,11 @@ p {
 }
 
 #ContentOfPinoon .service-item {
-  padding: 120px 125px;
+  padding-top: 50px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 80px;
+
 }
 
 #about {
