--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -296,11 +296,28 @@ p {
 }
 
 #ContentOfPinoon .service-item {
-  padding-top: 50px;
-  padding-right: 30px;
-  padding-bottom: 50px;
-  padding-left: 80px;
+  padding-top: 120px;
+  padding-right: 150px;
+  padding-bottom: 100px;
+  padding-left: 150px;
+  background-color: rgba(134, 142, 150, 0.75);
+}
 
+#ContentOfPinoon .service-item h2 {
+  font-weight: bold
+}
+
+#ContentOfPinoon .service-item img {
+  float: right;
+}
+
+#ContentOfPinoon .service-item ul {
+  list-style-type:disc
+}
+
+#ContentOfPinoon .service-item li {
+  list-style-type:disc
+  text-size: 768px
 }
 
 #about {
