--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -1008,3 +1008,45 @@ footer .back-to-top i {
     to { opacity: 1; @include transform(translate3d(0, 0, 0)); }
 }
 
+.faqBlock {
+  position: relative;
+  display: inline;
+  border-radius: 10px;
+  background: white;
+  padding: 20px;
+  font-size: 16px;
+  float: left;
+  width: 550px;
+  border: 4px solid #00bbe5;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  -webkit-transition: border-radius 1.3s, border-color 1.3s;
+}
+
+.faqBlock .question {
+    opacity: 100;
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    text-align: left;
+    font-size: 17px;
+    -webkit-transition: opacity 1.3s;
+
+}
+
+.faqBlock .answer {
+
+    opacity: 0;
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    text-align: left;
+    font-size: 17px;
+    -webkit-transition: opacity 1.3s;
+}
+
+
+/*.faqBlock:hover .answer{display: inline;}*/
+.faqBlock:hover {border-color: #f2745f;border-radius: 15px;}
+.faqBlock:hover .question{opacity: 0;}
+.faqBlock:hover .answer{opacity: 100;}
