--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -287,38 +287,7 @@ p {
   margin-top: 45px;
 }
 
-#ContentOfPinoon {
-  padding: 0px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
-}
 
-#ContentOfPinoon .service-item {
-  padding-top: 120px;
-  padding-right: 150px;
-  padding-bottom: 100px;
-  padding-left: 150px;
-  background-color: rgba(134, 142, 150, 0.75);
-}
-
-#ContentOfPinoon .service-item h2 {
-  font-weight: bold
-}
-
-#ContentOfPinoon .service-item img {
-  float: right;
-}
-
-#ContentOfPinoon .service-item ul {
-  list-style-type:disc
-}
-
-#ContentOfPinoon .service-item li {
-  list-style-type:disc
-  text-size: 768px
-}
 
 #about {
   padding: 0px;
@@ -1007,46 +976,130 @@ footer .back-to-top i {
     from { opacity: 0; @include transform(translate3d(0, -1em, 0)); }
     to { opacity: 1; @include transform(translate3d(0, 0, 0)); }
 }
-
-.faqBlock {
-  position: relative;
-  display: inline;
-  border-radius: 10px;
-  background: white;
-  padding: 20px;
-  font-size: 16px;
+/*
+.foto {
   float: left;
-  width: 550px;
-  border: 4px solid #00bbe5;
+  width: 33.33%;
+  padding: 5px;
+}
+
+.sira1::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+
+.foto,
+.foto * {
+  box-sizing: border-box;
+}
+.foto {
+  position: relative;
+  display: inline-block;
+  overflow: show;
+  max-width: 60%;
+  height: 60%;
+}
+.foto img {
+  max-width: 60%;
+}
+.foto .foto-layer_bottom {
+  display: block;
+}
+.foto .foto-layer_top {
+  opacity: 0;
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  right: 40px;
+  bottom: 40px;
+  width: 48%;
+  height: 55%;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  padding: 10px;
+  -moz-transition: all 0.4s ease-in-out 0s;
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  -ms-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
+}
+.foto:hover .foto-layer_top,
+.foto.active .foto-layer_top {
+  opacity: 1;
+}
+.foto .foto-text {
+  text-align: center;
+  font-size: 18px;
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.foto .foto-text_mobile {
+  font-size: 15px;
+  border-top: 1px solid rgba(179, 179, 179, 0.7);
   margin-top: 5px;
-  margin-bottom: 5px;
-  -webkit-transition: border-radius 1.3s, border-color 1.3s;
+  padding-top: 2px;
+  display: none;
+}
+.foto.active .foto-text_mobile {
+  display: block;
+}
+*/
+/*
+.foto {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+*/
+.foto {
+  position: relative;
+  float: left;
+  width: 25%;
+  padding: 5px;
+
 }
 
-.faqBlock .question {
-    opacity: 100;
-    position: absolute;
-    left: 10px;
-    top: 10px;
-    text-align: left;
-    font-size: 17px;
-    -webkit-transition: opacity 1.3s;
-
+.sira1::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
-.faqBlock .answer {
-
-    opacity: 0;
-    position: absolute;
-    left: 10px;
-    top: 10px;
-    text-align: left;
-    font-size: 17px;
-    -webkit-transition: opacity 1.3s;
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
 }
-
-
-/*.faqBlock:hover .answer{display: inline;}*/
-.faqBlock:hover {border-color: #f2745f;border-radius: 15px;}
-.faqBlock:hover .question{opacity: 0;}
-.faqBlock:hover .answer{opacity: 100;}
+.foto-layer_top {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 78%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #008CBA;
+}
+.foto:hover .foto-layer_top {
+  opacity: 1;
+}
+.text {
+  color: white;
+  font-size: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
