--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -1048,7 +1048,20 @@ footer-icons img {
   font-size: 17px;
   -webkit-transition: opacity 1.3s;
 }
-
+.faqBlock1 {
+  position: relative;
+  display: inline;
+  border-radius: 10px;
+  background: white;
+  padding: 20px;
+  font-size: 16px;
+  float: left;
+  width: 550px;
+  border: 4px solid #00bbe5;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  -webkit-transition: border-radius 1.3s, border-color 1.3s;
+}
 
 /*.faqBlock:hover .answer{display: inline;}*/
 .faqBlock:hover {border-color: #f2745f;border-radius: 15px;}
