--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -224,20 +224,19 @@ p {
 }
 
 .banner {
-  background-image: url(../img/banner-bg.jpg);/*Üstteki resim için image srcsi */
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
 }
 
 
 .banner-content {
+  position: absolute;
   text-align: center;
   padding: 250px 0px 200px 0px;
 }
 
 .banner-content h6 {
-  font-size: 18px;
+  -webkit-text-stroke-width: 1.5px;
+  -webkit-text-stroke-color: black;
+  font-size: 22px;
   color: #fff;
   font-weight: 700;
   text-transform: uppercase;
@@ -246,23 +245,21 @@ p {
 }
 
 .banner-content h2 {
+  -webkit-text-stroke-width: 4px;
+  -webkit-text-stroke-color: black;
   font-size: 80px;
   font-weight: 700;
   text-transform: uppercase;
   color: #fff;
   letter-spacing: 2px;
-  margin-top: 0px;
-  margin-bottom: 5px;
 }
-
 .banner-content h3 {
-  font-size: 50px;
-  font-weight: 700;
-  text-transform: uppercase;
+  -webkit-text-stroke-width: 2.5px;
+  -webkit-text-stroke-color: black;
   color: #fff;
-  letter-spacing: 2px;
-  margin-top: 0px;
-  margin-bottom: 30px;
+  font-size: 50px;
+  text-transform: uppercase;
+  margin-top: -0px;
 }
 
 .banner-content ul {
@@ -1081,4 +1078,8 @@ footer-icons img {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+}
+#myvideo{
+  z-index: -1;
+  position: relative;
 }
