--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -1299,6 +1299,17 @@ footer-icons img {
   transform: translate(-50%, -50%);
   text-align: center;
 }
+.textbat {
+  color: white;
+  font-size: 14px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
 #myvideo{
   z-index: -1;
   position: relative;
