--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -301,195 +301,9 @@ p {
   margin-top: 45px;
 }
 
-#ContentOfPinoon {
-  padding: 0px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
-}
-
-#ContentOfPinoon .service-item {
-  padding-top: 120px;
-  padding-right: 150px;
-  padding-bottom: 100px;
-  padding-left: 150px;
-  background-color: rgba(134, 142, 150, 0.75);
-}
-
-#ContentOfPinoon .service-item h2 {
-  font-weight: bold
-}
-
-#ContentOfPinoon .service-item h3 {
-  font-weight: bold
-}
-
-#ContentOfPinoon .service-item img {
-  float: right;
-}
-
-#ContentOfPinoon .service-item ul {
-  list-style-type:disc
-}
-
-#ContentOfPinoon .service-item li {
-  list-style-type:disc
-  text-size: 768px
-}
-
-#ContentOfObstacleCourse {
-  padding: 0px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
-}
-
-#ContentOfObstacleCourse .service-item {
-  padding-top: 120px;
-  padding-right: 150px;
-  padding-bottom: 100px;
-  padding-left: 150px;
-  background-color: rgba(54, 62, 80, 0.75); /*grey*/
-}
-
-#ContentOfObstacleCourse .service-item h2 {
-  font-weight: bold
-}
-
-#ContentOfObstacleCourse .service-item h3 {
-  font-weight: bold
-}
-
-#ContentOfObstacleCourse .service-item img {
-  float: right;
-}
-
-#ContentOfObstacleCourse .service-item ul {
-  list-style-type:disc
-}
-
-#ContentOfObstacleCourse .service-item li {
-  list-style-type:disc
-  text-size: 768px
-}
-
-#ContentOfProximityAlert {
-  padding: 0px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
-}
-
-#ContentOfProximityAlert .service-item {
-  padding-top: 120px;
-  padding-right: 150px;
-  padding-bottom: 100px;
-  padding-left: 150px;
-  background-color: rgba(242, 116, 95, 0.75); /*red*/
-}
-
-#ContentOfProximityAlert .service-item h2 {
-  font-weight: bold
-  text-color: white;
-}
-
-#ContentOfProximityAlert .service-item h3 {
-  font-weight: bold
-}
-
-#ContentOfProximityAlert .service-item img {
-  float: right;
-}
-
-#ContentOfProximityAlert .service-item ul {
-  list-style-type:disc
-}
-
-#ContentOfProximityAlert .service-item li {
-  list-style-type:disc
-  text-size: 768px
-}
-
-#ContentOfDuckShoot {
-  padding: 0px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
-}
-
-#ContentOfDuckShoot .service-item {
-  padding-top: 120px;
-  padding-right: 150px;
-  padding-bottom: 100px;
-  padding-left: 150px; 
-  background-color: rgba(54, 62, 80, 0.75); /*grey*/
-}
-
-#ContentOfDuckShoot .service-item h2 {
-  font-weight: bold
-}
-
-#ContentOfDuckShoot .service-item h3 {
-  font-weight: bold
-}
-
-#ContentOfDuckShoot .service-item img {
-  float: right;
-}
-
-#ContentOfDuckShoot .service-item ul {
-  list-style-type:disc
-}
-
-#ContentOfDuckShoot .service-item li {
-  list-style-type:disc
-  text-size: 768px
-}
-
-#ContentOfMaze {
-  padding: 0px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
-}
-
-#ContentOfMaze .service-item {
-  padding-top: 120px;
-  padding-right: 150px;
-  padding-bottom: 100px;
-  padding-left: 150px;
-  background-color: rgba(0, 187, 229, 0);
-}
-
-#ContentOfMaze .service-item h2 {
-  font-weight: bold
-}
-
-#ContentOfMaze .service-item h3 {
-  font-weight: bold
-}
-
-#ContentOfMaze .service-item img {
-  float: right;
-}
-
-#ContentOfMaze .service-item ul {
-  list-style-type:disc
-}
-
-#ContentOfMaze .service-item li {
-  list-style-type:disc
-  text-size: 768px
-}
-
 #about {
   padding: 0px;
-  background-image: url(../img/services-bg.jpg);/*alttaki resmin image srcsi */
+  background-image: url(../img/raspi.png);/*alttaki resmin image srcsi */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -606,9 +420,10 @@ p {
   color: #7a7a7a;
 }
 
-.what-we-do .tab-content-services .right-text .primary-button {
+.what-we-do .tab-content-services .right-image .primary-button {
   margin-top: 35px;
   margin-bottom: 50px;
+  margin-left: 300px;
 }
 
 #portfolio {
@@ -1316,7 +1131,7 @@ footer-icons img {
 }
 
 #schedule {
-  background-color: rgba(242, 116, 95, 0.1);
+  background-color: rgba(62, 62, 62, 1);
 }
 
 #apply .applicationbuttons a{
