--- a/css/style2.css
+++ b/css/style2.css
@@ -13,6 +13,11 @@
     align-content: stretch;
 }
 
+.video-container{
+    position: relative;
+    min-height:40%;
+    background-color: rgb(54, 62, 80);
+}
 .bannerContainer{
     position: absolute;
     top: 0em;
@@ -22,12 +27,16 @@
     height:100%;
     text-align: center;
     padding: 10%;
+    padding-top: 15%;
+    max-height: 100%;
+    margin-bottom: 1px;
 }
 
 h1{
     color: white;
     font-weight: 400;
 }
+
 h2{
     color: white;
     font-weight: 400;
